Closed Bug 1445682 Opened 8 years ago Closed 8 years ago

thread '<unnamed>' panicked at 'assertion failed: author_styles.quirks_mode == self.as_node().owner_doc().quirks_mode() || author_styles.stylesheets.is_empty()', servo/components/style/gecko/wrapper.rs:174:9

Categories

(Core :: CSS Parsing and Computation, defect)

59 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- disabled
firefox60 --- disabled
firefox61 --- fixed

People

(Reporter: jkratzer, Assigned: emilio)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase)

Attachments

(3 files, 1 obsolete file)

Attached file trigger.html (obsolete) —
Testcase found while fuzzing mozilla-central rev c56ef1c14a55. thread '<unnamed>' panicked at 'assertion failed: author_styles.quirks_mode == self.as_node().owner_doc().quirks_mode() || author_styles.stylesheets.is_empty()', servo/components/style/gecko/wrapper.rs:174:9 stack backtrace: [Parent 14951, Main Thread] WARNING: Failed to retarget HTML data delivery to the parser thread.: file /builds/worker/workspace/build/src/parser/html/nsHtml5StreamParser.cpp, line 1009 0: 0x7f6ab4bd803b - std::sys::unix::backtrace::tracing::imp::unwind_backtrace::hb98fbe643b37b8bb 1: 0x7f6ab4be955e - std::sys_common::backtrace::print::ha7844e468550fcb9 2: 0x7f6ab4bc87b0 - std::panicking::default_hook::{{closure}}::h83c090f00cd2917d 3: 0x7f6ab4bc82ec - std::panicking::default_hook::hf9722061a353cd29 4: 0x7f6ab4bc8c35 - std::panicking::rust_panic_with_hook::h574be4fada9826dc 5: 0x7f6ab4cdb0a1 - <unknown> Redirecting call to abort() to mozalloc_abort rax = 0x0000000000000000 rdx = 0x0000000000000000 rcx = 0x00007f6ac20282dd rbx = 0x00007f6ac22f6700 rsi = 0x00007f6ac22f7770 rdi = 0x00007f6ac22f6540 rbp = 0x00007ffc3ae99350 rsp = 0x00007ffc3ae99340 r8 = 0x00007f6ac22f7770 r9 = 0x00007f6ac33c2740 r10 = 0x0000000000000058 r11 = 0x00007f6ac1f9e7a0 r12 = 0x00007f6ab581e6a0 r13 = 0x0000000000000027 r14 = 0x00000000000000ae r15 = 0x0000000000000009 rip = 0x000000000041c790 OS|Linux|0.0.0 Linux 4.4.0-116-generic #140-Ubuntu SMP Mon Feb 12 21:23:04 UTC 2018 x86_64 CPU|amd64|family 6 model 78 stepping 3|1 GPU||| Crash|SIGSEGV|0x0|0 0|0|firefox|mozalloc_abort|hg:hg.mozilla.org/mozilla-central:memory/mozalloc/mozalloc_abort.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|33|0x5 0|1|firefox|abort|hg:hg.mozilla.org/mozilla-central:memory/mozalloc/mozalloc_abort.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|80|0x5 0|2|libxul.so|panic_abort::__rust_start_panic|git:github.com/rust-lang/rust:src/libpanic_abort/lib.rs:4d90ac38c0b61bb69470b61ea2cccea0df48d9e5|59|0x5 0|3|libxul.so|std::panicking::rust_panic|git:github.com/rust-lang/rust:src/libstd/panicking.rs:4d90ac38c0b61bb69470b61ea2cccea0df48d9e5|608|0x9 0|4|libxul.so|std::panicking::rust_panic_with_hook|git:github.com/rust-lang/rust:src/libstd/panicking.rs:4d90ac38c0b61bb69470b61ea2cccea0df48d9e5|593|0xd 0|5|libxul.so|std::panicking::begin_panic<&str>|git:github.com/rust-lang/rust:src/libstd/panicking.rs:4d90ac38c0b61bb69470b61ea2cccea0df48d9e5|538|0x12 0|6|libxul.so|style::stylist::Stylist::push_applicable_declarations<style::gecko::wrapper::GeckoElement,closure>|git:github.com/rust-lang/rust:src/libcore/macros.rs:4d90ac38c0b61bb69470b61ea2cccea0df48d9e5|0|0x72 0|7|libxul.so|style::style_resolver::StyleResolverForElement<style::gecko::wrapper::GeckoElement>::match_primary<style::gecko::wrapper::GeckoElement>|hg:hg.mozilla.org/mozilla-central:servo/components/style/style_resolver.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|438|0x3e 0|8|libxul.so|style::style_resolver::StyleResolverForElement<style::gecko::wrapper::GeckoElement>::resolve_primary_style<style::gecko::wrapper::GeckoElement>|hg:hg.mozilla.org/mozilla-central:servo/components/style/style_resolver.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|157|0xd 0|9|libxul.so|style::style_resolver::StyleResolverForElement<style::gecko::wrapper::GeckoElement>::resolve_style<style::gecko::wrapper::GeckoElement>|hg:hg.mozilla.org/mozilla-central:servo/components/style/style_resolver.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|230|0x5 0|10|libxul.so|style::style_resolver::StyleResolverForElement<style::gecko::wrapper::GeckoElement>::resolve_style_with_default_parents<style::gecko::wrapper::GeckoElement>|hg:hg.mozilla.org/mozilla-central:servo/components/style/style_resolver.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|268|0xe 0|11|libxul.so|style::traversal::compute_style<style::gecko::wrapper::GeckoElement>|hg:hg.mozilla.org/mozilla-central:servo/components/style/traversal.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|611|0x8 0|12|libxul.so|style::gecko::traversal::{{impl}}::process_preorder<closure>|hg:hg.mozilla.org/mozilla-central:servo/components/style/traversal.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|420|0x13 0|13|libxul.so|style::driver::traverse_dom<style::gecko::wrapper::GeckoElement,style::gecko::traversal::RecalcStyleOnly>|hg:hg.mozilla.org/mozilla-central:servo/components/style/driver.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|75|0x20 0|14|libxul.so|geckoservo::glue::traverse_subtree|hg:hg.mozilla.org/mozilla-central:servo/ports/geckolib/glue.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|287|0xe 0|15|libxul.so|geckoservo::glue::Servo_TraverseSubtree|hg:hg.mozilla.org/mozilla-central:servo/ports/geckolib/glue.rs:c56ef1c14a555023949ad727c86e3c2df995edd2|345|0xe 0|16|libxul.so|mozilla::ServoStyleSet::StyleDocument|hg:hg.mozilla.org/mozilla-central:layout/style/ServoStyleSet.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|1048|0x19 0|17|libxul.so|mozilla::ServoRestyleManager::DoProcessPendingRestyles|hg:hg.mozilla.org/mozilla-central:layout/base/ServoRestyleManager.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|1156|0x12 0|18|libxul.so|mozilla::PresShell::DoFlushPendingNotifications|hg:hg.mozilla.org/mozilla-central:layout/base/PresShell.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|4196|0x18 0|19|libxul.so|nsRefreshDriver::Tick|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|1916|0x5 0|20|libxul.so|mozilla::RefreshDriverTimer::TickRefreshDrivers|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|311|0xf 0|21|libxul.so|mozilla::RefreshDriverTimer::Tick|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|333|0x12 0|22|libxul.so|mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::TickRefreshDriver|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|774|0x5 0|23|libxul.so|mozilla::VsyncRefreshDriverTimer::RefreshDriverVsyncObserver::NotifyVsync|hg:hg.mozilla.org/mozilla-central:layout/base/nsRefreshDriver.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|588|0xc 0|24|libxul.so|mozilla::layout::VsyncChild::RecvNotify|hg:hg.mozilla.org/mozilla-central:layout/ipc/VsyncChild.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|68|0x9 0|25|libxul.so|mozilla::layout::PVsyncChild::OnMessageReceived|s3:gecko-generated-sources:668ae60ab945c9f59521cbd54f26b8fa229f96b8af45937bd735d86a432f1cf35482c0014090f530c334ca11ea7389383a8632cd0e23daddc7575da11217aca5/ipc/ipdl/PVsyncChild.cpp:|156|0xf 0|26|libxul.so|mozilla::ipc::MessageChannel::DispatchAsyncMessage|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|2135|0x6 0|27|libxul.so|mozilla::ipc::MessageChannel::DispatchMessage|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|2065|0xb 0|28|libxul.so|mozilla::ipc::MessageChannel::RunMessage|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|1911|0xb 0|29|libxul.so|mozilla::ipc::MessageChannel::MessageTask::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessageChannel.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|1944|0xc 0|30|libxul.so|nsThread::ProcessNextEvent|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|1040|0x15 0|31|libxul.so|NS_ProcessNextEvent|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|517|0x11 0|32|libxul.so|mozilla::ipc::MessagePump::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|97|0xa 0|33|libxul.so|MessageLoop::RunInternal|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:c56ef1c14a555023949ad727c86e3c2df995edd2|326|0x17 0|34|libxul.so|MessageLoop::Run|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:c56ef1c14a555023949ad727c86e3c2df995edd2|319|0x8 0|35|libxul.so|nsBaseAppShell::Run|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|157|0xd 0|36|libxul.so|XRE_RunAppShell|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|893|0x11 0|37|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|269|0x5 0|38|libxul.so|MessageLoop::RunInternal|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:c56ef1c14a555023949ad727c86e3c2df995edd2|326|0x17 0|39|libxul.so|MessageLoop::Run|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:c56ef1c14a555023949ad727c86e3c2df995edd2|319|0x8 0|40|libxul.so|XRE_InitChildProcess|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|719|0x8 0|41|firefox|content_process_main|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|50|0x14 0|42|firefox|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:c56ef1c14a555023949ad727c86e3c2df995edd2|280|0x11 0|43|libc-2.23.so||||0x20830 0|44|firefox|MOZ_ReportAssertionFailure|hg:hg.mozilla.org/mozilla-central:mfbt/Assertions.h:c56ef1c14a555023949ad727c86e3c2df995edd2|164|0x5
Flags: in-testsuite?
Attached file trigger.html
Additional testcase which targets attachShadow rather than createShadowRoot.
Attachment #8958873 - Attachment is obsolete: true
Flags: needinfo?(emilio)
Assignee: nobody → emilio
Component: HTML: Parser → CSS Parsing and Computation
Flags: needinfo?(emilio)
Comment on attachment 8959708 [details] Bug 1445682: Make Shadow DOM account for stylesheet applicableness correctly. r=xidorn Xidorn Quan [:xidorn] UTC+10 has approved the revision. https://phabricator.services.mozilla.com/D748
Attachment #8959708 - Flags: review+
Pushed by ecoal95@gmail.com: https://hg.mozilla.org/integration/autoland/rev/f2149d69f47c Make Shadow DOM account for stylesheet applicableness correctly. r=xidorn
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Created web-platform-tests PR https://github.com/w3c/web-platform-tests/pull/10103 for changes under testing/web-platform/tests
Attachment #8960864 - Flags: review?(emilio) → review+
Pushed by xquan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fbc64799613c followup - Properly undefine the macro. r=emilio
Blocks: 1420757
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: